Polish completion popup sizing and the server run icon
Took 30 minutes